--- a/style.css
+++ b/style.css
@@ -7,22 +7,27 @@ body {
     padding: 0;
     font-size: 30px;
     max-width: 1440px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
 
 }
-p {
-    padding: 50px;
-}
+
 #jeden {
-    border: 1px solid black;
+    flex: 50%;
+    border: 1px solid rgb(212, 9, 9);
     max-width: 1440px;
 }
 
 #dwa {
+    flex: 50%;
     border: 1px solid green;
     max-width: 1000px;
 }
 
 #trzy {
+    flex: 50%;
     border: 1px solid red;
     max-width: 720px;
 }
